# hacky-dnn-benchmarks

./: CMakeLists.txt  LICENSE  benchmark.cc  export_models.py  requirements.txt  results.txt
